--- a/src/main/webapp/app/entities/contacts/contacts-update.html
+++ b/src/main/webapp/app/entities/contacts/contacts-update.html
@@ -85,7 +85,7 @@
                                 </span>
                 <input id="field_vm.contacts.contactCompany" name="companyContact"
                        ng-model="vm.contactDTO.contacts.companyContact.fullName"
-                       class="form-control input-sm">
+                       class="form-control input-sm" ng-click="vm.lookUpContact(vm.contactDTO.contacts.companyContact.id)">
             </div>
         </div>
 
