--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -37,7 +37,10 @@
 
 
 
-
+            <ul>
+                <li><a href="https://www.fsmediavault.co/lpc" target="_blank">Dev LPC</a></li>
+                <li><a href="https://www.fsmediavault.co" target="_blank">Dev PKO</a></li>
+            </ul>
 
 			<!--<ul>
 				<li><a href="https://www.photoapprovals.com/" target="_blank"
