--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -406,6 +406,7 @@ Latest compiled and minified JavaScript
 		src="app/entities/contacts/contacts-delete-dialog.controller.js"></script>
 	<script src="app/entities/contacts/contacts-add.controller.js"></script>
 	<script src="app/entities/contacts/contacts-add-modal.controller.js"></script>
+	<script src="app/entities/contacts/contacts-update-modal.controller.js"></script>
 	<script
 		src="app/entities/contact-relationships/contact-relationships.state.js"></script>
 	<script
