--- a/src/main/webapp/app/entities/contacts/contacts-update-modal.html
+++ b/src/main/webapp/app/entities/contacts/contacts-update-modal.html
@@ -8,7 +8,7 @@
 
         <div class="row">
             <div class="col-xs-2">
-                <h4>Add New Contact</h4>
+                <h4>Update Contact</h4>
             </div>
         </div>
         <div class="row">
