--- a/src/main/webapp/app/entities/projects/projects-update.html
+++ b/src/main/webapp/app/entities/projects/projects-update.html
@@ -109,7 +109,8 @@
 					</button>
 				</span> <input id="field_vm.projects.owner" type="text"
                                class="form-control input-sm"
-                               ng-model="vm.projectsDTO.projects.owner.fullName">
+                               ng-model="vm.projectsDTO.projects.owner.fullName"
+                               ng-click="vm.lookUpContact(vm.projectsDTO.projects.owner.id)" >
             </div>
 
         </div>
@@ -350,7 +351,7 @@
                     <div class="input-group">
 
                         </small><span class="input-group-addon input-sm"><small>PO
-								{{$index}}</small></span> <input type="text" class="form-control input-sm"
+								{{$index+1}}</small></span> <input type="text" class="form-control input-sm"
                                                                  ng-model="po.po_number">
                     </div>
                 </div>
@@ -431,14 +432,14 @@
         <div id="labs">
 
             <div class="row">
-                <div class="col-lg-9">
+                <div class="col-lg-5">
                     <div ng-repeat="labs in vm.projectsDTO.projectLabTaskses">
                         <div class="row">
 
-                            <div class="col-lg-7">
+                            <div class="col-lg-10">
                                 <div class="input-group">
 
-                                    <span class="input-group-addon input-sm" id="sizing-addon2">{{$index}}</span>
+                                    <span class="input-group-addon input-sm" id="sizing-addon2">{{$index+1}}</span>
 
                                     <select class="form-control input-sm" id="field_task_name"
                                             name="task_name" ng-model="labs.task_name"
@@ -507,7 +508,7 @@
 						</button>
 					</span> <input id="field_vm.projects.mainContact" type="text"
                                    class="form-control input-sm" ng-model="vm.mainC.contact.fullName"
-                                   readonly>
+                                   ng-click="vm.lookUpContact(vm.mainC.contact.id)" readonly>
             </div>
 
         </div>
@@ -579,6 +580,7 @@
 						</button>
 					</span> <input id="field_vm.projects.unitPublicist" type="text"
                                    class="form-control input-sm" ng-model="vm.uPub.contact.fullName"
+                                   ng-click="vm.lookUpContact(vm.uPub.contact.id)"
                                    readonly>
             </div>
 
@@ -649,6 +651,7 @@
 						</button>
 					</span> <input id="field_vm.projects.unitPhotographer" type="text"
                                    class="form-control input-sm" ng-model="vm.uPhoto.contact.fullName"
+                                   ng-click="vm.lookUpContact(vm.uPhoto.contact.id)"
                                    readonly>
             </div>
 
@@ -719,7 +722,7 @@
 						</button>
 					</span> <input id="field_vm.projects.labInfo" type="text"
                                    class="form-control input-sm"
-                                   ng-model="vm.lab.contact.fullName" readonly>
+                                   ng-model="vm.lab.contact.fullName" ng-click="vm.lookUpContact(vm.lab.contact.id)" readonly>
             </div>
 
         </div>
@@ -916,7 +919,7 @@
 				</span> <input id="field_vm.projects.productCompany" type="text"
                                class="form-control input-sm"
                                ng-model="vm.projectsDTO.projects.productionCompanyContact.fullName"
-                               readonly>
+                               ng-click="vm.lookUpContact(vm.projectsDTO.projects.productionCompanyContact.id)" readonly>
             </div>
 
         </div>
@@ -1088,15 +1091,15 @@
 							<span class="glyphicon glyphicon-list-alt btn-xs"></span>
 						</button>
 					</span> <input type="text" id="field_vm.projects.talents" class="input-xs"
-                                   ng-model="tags.contact.fullName"/>
+                                   ng-model="tags.contact.fullName" ng-click="vm.lookUpContact(tags.contact.id)"  readonly/>
                 </div>
 
             </td>
 
             <td><input class="input-xs" type="text"
-                       ng-model="tags.contact.username"></td>
+                       ng-model="tags.contact.username" readonly></td>
             <td><input class="input-xs" type="text"
-                       ng-model="tags.contact.password"/></td>
+                       ng-model="tags.contact.password" readonly/></td>
 
             <td class="col-xs-1"><input class="input-xs" style="width: 50px"
                                         id="field_vm.projectRoles.soloKillPct" type="text"
@@ -1187,12 +1190,12 @@
 							<span class="glyphicon glyphicon-list-alt btn-xs"></span>
 						</button>
 					</span> <input type="text" id="field_vm.projects.execs" class="input-xs"
-                                   ng-model="execs.contact.fullName"/>
+                                   ng-model="execs.contact.fullName" ng-click="vm.lookUpContact(execs.contact.id)" readonly/>
                 </div>
 
             </td>
-            <td><input type="text" ng-model="execs.contact.username"/></td>
-            <td><input type="text" ng-model="execs.contact.password"/></td>
+            <td><input type="text" ng-model="execs.contact.username" readonly/></td>
+            <td><input type="text" ng-model="execs.contact.password" readonly/></td>
             <td><select ng-model="execs.downloadType"
                         ng-options="excl.id as excl.value for excl in vm.downloadType">
                 <option>{{excl.value}}</option>
@@ -1337,7 +1340,7 @@
 					</button>
 				</span> <input type="text" id="field_vm.projects.parentInfo"
                                class="form-control input-sm"
-                               ng-model="vm.projectsDTO.projects.parentCompanyContact.fullName">
+                               ng-model="vm.projectsDTO.projects.parentCompanyContact.fullName" ng-click="vm.lookUpContact(vm.projectsDTO.projects.parentCompanyContact.id)">
             </div>
         </div>
     </div>
